# generic-state-machine-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: dynamic_state_machine.rs  error.rs  event.rs  lib.rs  primitives.rs  state.rs  state_machine.rs  static_state_machine.rs  tests.rs
